# Mirea

./: .gitignore  README.md
1/: 1.pro
1lab/: CMakeLists.txt
1lab/inc/: Complex1.h
1lab/src/: Complex1.cpp  Complex2.cpp  main.cpp
2Lab/: CMakeLists.txt  Headers.h  main.cpp
2Sem/2Lab/: Source.cpp  main.cpp
2Sem/3Lab/: CMakeLists.txt
2Sem/4Lab/: main.cpp
2Sem/5Lab/: Complex.h  main.cpp
2Sem/6Lab/: CMakeLists.txt  main.cpp
2Sem/7Lab/: Human.cpp
2Sem/8Lab/: Auto.cpp  Auto.h  CMakeLists.txt  Complex.h  Student.cpp
2Sem/Calculator/: button.h  calculator.h  calculator.ui  main.cpp
2Sem/console calculator /: CMakeLists.txt  Colculations.cpp  Colculations.h  Sourse.cpp  Sourse.h  main.cpp
3Lab/: 1.cpp  1.h  2.cpp  2.h  4.cpp  4.h  CMakeLists.txt  main.cpp
3Lab/Headers/: 1.h  3.h  Child.h  Tiles.h  Vector.h
3Lab/Sources/: 1.cpp  2.cpp  3.cpp  Complex.cpp  Vector.cpp
4Lab/: CMakeLists.txt  Child.cpp  Child.h  Vector.cpp  Vector.h  main.cpp
4Lab/Headers/: Child.h  Complex.h  Tiles.h  Vector.h
4Lab/Sources/: Child.cpp  Complex.cpp  Tiles.cpp  Vector.cpp
5Lab/: CMakeLists.txt  Complex.cpp  Complex.h  Vector.cpp  Vector.h  main.cpp
7Lab/: CMakeLists.txt  Human.cpp  Human.h  main.cpp
8Lab/: Auto.cpp  Auto.h  Complex.cpp  Complex.h  Student.cpp  Student.h  main.cpp
Calculator/: Calculator.pro  button.cpp  calculator.cpp  calculator.h
QT-Calculator/: QT-Calculator.pro
console calculator /: CMakeLists.txt  Colculations.h  Polskaya.cpp  Polskaya.h  Sourse.cpp  Sourse.h  main.cpp
polskaya/: CMakeLists.txt  main.cpp  to_pol.cpp  to_pol.h
(+110 files in other folders)
